[JENKINS-73640] Use AWS SDK for Java 2.x
Co-authored-by: Denis Blanchette <dblanchette@coveo.com>